# mdBook

./: .editorconfig  .envrc  .gitignore  .release-please-manifest.json  404.html  CHANGELOG.md  CNAME  Cargo.toml  README.md  admonish.html  first.html  flake.nix  index.html  landing.html  package-lock.json  package.json  pnpm-lock.yaml  print.html  release-please-config.json  searchindex.js  searchindex.json  secret.html
.github/: dependabot.yml
.github/workflows/: build.yml  cachix.yml  changelog.yml  deploy.yml  release-please.yml  release.yml  website.yml
example/: .gitignore  book.toml
example/src/: SUMMARY.md  admonish.md  alerts.md  first.md  landing.md  secret.md
example/theme/: catppuccin-admonish.css  catppuccin-alerts.css  catppuccin-highlight.css  catppuccin.css  index.hbs
palette/: _admonish.scss  catppuccin-admonish.scss  catppuccin-highlight.scss  catppuccin.scss  package-lock.json  package.json
src/: catppuccin-admonish.scss  catppuccin-alerts.scss  catppuccin.scss  install.rs  lib.rs  main.rs  toml.rs
src/assets/: catppuccin.css
src/palette/: Makefile  _catppuccin.scss  catppuccin-highlight.scss  catppuccin.scss  main.scss
