[package]
name = "mdbook-catppuccin"
authors = ["Goudham Suresh <sgoudham@gmail.com>", "winston <hey@winston.sh>"]
description = "A mdbook preprocessor that exposes the catppuccin flavours as available themes!"
version = "1.0.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/catppuccin/mdBook"
keywords = ["mdbook", "markdown", "catppuccin", "preprocessor", "plugin"]
include = ["/src", "/assets", "/README.md", "/LICENSE"]

[[bin]]
name = "mdbook-catppuccin"
path = "src/bin/mdbook-catppuccin.rs"

[lib]
name = "mdbook_catppuccin"
path = "src/lib.rs"

[dependencies]
clap = { version = "3.2.25", features = ["cargo"] }
mdbook = "=0.4.22"
env_logger = "0.10.0"
log = "0.4.20"
serde_json = "1.0.105"
semver = "1.0.16"
toml_edit = "0.20.0"
version-compare = "0.1.1"
