[package]
name = "mdbook-catppuccin"
authors = ["Goudham Suresh <sgoudham@gmail.com>", "winston <hey@winston.sh>"]
description = "🎊 Soothing pastel theme for mdBook"
version = "2.0.1"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/catppuccin/mdBook"
keywords = ["mdbook", "markdown", "catppuccin", "preprocessor", "plugin"]
include = ["/src", "/assets", "/README.md", "/LICENSE"]

[[bin]]
name = "mdbook-catppuccin"
path = "src/bin/mdbook-catppuccin.rs"

[lib]
name = "mdbook_catppuccin"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.4.6", features = ["cargo"] }
clap_complete = "4.4.4"
mdbook = { version = "0.4.35", default_features = false }
env_logger = "0.10.0"
log = "0.4.20"
serde_json = "1.0.105"
semver = "1.0.19"
toml_edit = "0.20.7"
version-compare = "0.1.1"

[profile.release]
lto = true
opt-level = "z"
strip = true
