[package]
name = "mdbook-catppuccin"
authors = ["Goudham Suresh <sgoudham@gmail.com>", "winston <hey@winston.sh>"]
description = "🎊 Soothing pastel theme for mdBook"
version = "3.0.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/catppuccin/mdBook"
keywords = ["mdbook", "markdown", "catppuccin", "preprocessor", "plugin"]
include = ["/src", "/assets", "/README.md", "/LICENSE"]

[[bin]]
name = "mdbook-catppuccin"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.7", features = ["cargo"] }
clap_complete = "4.4.4"
env_logger = "0.10.0"
log = "0.4.20"

[profile.release]
lto = true
opt-level = "z"
strip = true
